<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_weight="1"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/mon"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cloudy_1"
                android:contentDescription="cloudy" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/partly_cloudy"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="24C - 31C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/tue"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rain_2"
                android:contentDescription="showers" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/showers"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="24C - 30C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/wed"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rain_1"
                android:contentDescription="rain" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/rain"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="22C - 23C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/thu"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rain_1"
                android:contentDescription="scattered showers" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/scattered_showers"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="22C - 27C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/fri"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cloud"
                android:contentDescription="cloudy" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/mostly_cloudy"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="22C - 30C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/sat"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/storm"
                android:contentDescription="cloudy" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/thunderstorms"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="25C - 28C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/sun"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/storm"
                android:contentDescription="cloudy" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/scattered_thunderstorms"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="24C - 27C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/mon"
                android:textSize="@dimen/text_days"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/rain_2"
                android:contentDescription="cloudy" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/showers"
                    android:textSize="@dimen/text_forecast" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="24C - 26C"
                    android:textSize="@dimen/text_forecast" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>